- added test for pslib in configure; - added missing dependecies in quick_quick_lisp.sh; - changed gv test results from warning to error; - mentioned pslib and gv in README.

--- a/README.org
+++ b/README.org
@@ -21,14 +21,17 @@
    - sbcl compiler;
    - sqlite3;
    - wish graphical shell (>= 8.6);
-   - GIMP.
+   - GIMP;
+   - gv (postscript viewer).
 
 ** Libraries
 
 *** C
 
     - libsqlite3
-      There is no needs for the header file, just the actual library is needed
+    - pslib1
+
+There is no needs for the header file, just the actual library is needed
 
 *** Common Lisp
 
