--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: fulci 0.1\n"
 "Report-Msgid-Bugs-To: https://notabug.org/cage/fulci\n"
 "POT-Creation-Date: 2019-02-21 17:28+0100\n"
-"PO-Revision-Date: 2019-02-20 20:50+0100\n"
+"PO-Revision-Date: 2019-02-21 17:31+0100\n"
 "Last-Translator: cage\n"
 "Language-Team: Italian\n"
 "Language: it\n"
@@ -546,7 +546,7 @@ msgstr "Nessun regista specificato"
 
 #: src/manage-movie.lisp:408
 msgid "Press to add an image from file"
-msgstr "Premi qui per aggiungere un imimmagine da file"
+msgstr "Premi qui per aggiungere un immagine da file"
 
 #: src/manage-movie.lisp:428
 msgid "Primary title:"
