- added procedures to manage countries; - added a button, when  a movie is added, to try  to apply changes and   close window regardless of the results; - updated italian translation.

--- a/LICENSES.org
+++ b/LICENSES.org
@@ -308,3 +308,8 @@
   - data/icons/go-to-copy.png
     FatCow Web Hosting [CC BY 3.0 us (https://creativecommons.org/licenses/by/3.0/us/deed.en)],
     via Wikimedia Commons
+
+  - data/icons/world.png
+    https://commons.wikimedia.org/wiki/File:Farm-Fresh_globe_africa.png
+
+    FatCow [CC BY 3.0 (https://creativecommons.org/licenses/by/3.0)]
