--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,29 @@
+2022-10-16 cage
+
+	* fulci.asd,
+	* quick_quicklisp.sh.in,
+	* src/package.lisp,
+	* src/wikipedia.lisp:
+
+	- restored procedures to fetch movies information from wikipedia.
+	- restored procedures to fetch movies image from wikipedia.
+
+2021-11-15 cage
+
+	* src/wikipedia.lisp:
+
+	- fixed fetching movie title from wikipedia.
+
 2021-11-13 cage
 
+	* ChangeLog,
 	* Makefile.am,
 	* Makefile.in,
 	* aclocal.m4,
 	* compile,
 	* configure,
+	* configure.ac,
+	* fulci.asd,
 	* install-sh,
 	* missing,
 	* src/db.lisp,
@@ -14,6 +33,7 @@
 	- updated building script;
 	- addes 'src/' as dependecy of rule to compile the executable in
 	Makefile.
+	- updated ChangeLog and version number.
 
 2020-12-01 cage
 
